<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<android.support.v7.widget.CardView
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    cardView:cardCornerRadius="4dp"
    cardView:cardBackgroundColor="@android:color/white"
    android:id="@+id/cardView"
    cardView:cardUseCompatPadding="true"
    cardView:cardElevation="2dp">

    <RelativeLayout
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_launcher_chrome"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/imageView">

        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/description"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:ellipsize="end"
            android:textSize="15sp"
            android:minLines="1"
            android:maxLines="2"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/pubDate"
            android:text="@string/pubdate"
            android:layout_width="match_parent"
            android:fontFamily="serif"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>
</android.support.v7.widget.CardView>
</LinearLayout>